# MAGPB

./: CHANGELOG.md  LICENSE  pyproject.toml
.github/workflows/: lint.yml
bot/: __init__.py  __main__.py  bot.py  config.py
bot/models/: __init__.py  context.py  plugin.py  tree.py  views.py
bot/plugins/: jishaku.py
bot/plugins/fun/: __init__.py  plugin.py  views.py
bot/plugins/utils/: __init__.py  info.py
bot/utilities/: __init__.py  format.py
