[tool.poetry]
name = "magpb"
version = "0.1.0"
description = "MrArkon's General Purpose Bot"
authors = ["MrArkon <mrarkon@outlook.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["speed"], version = "^2.2.0"}
psutil = "^5.9.4"
jishaku = "^2.5.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyright = "^1.1.296"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
pythonVersion = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
